Closed
Bug 247239
Opened 21 years ago
Closed 21 years ago
'gripper' should be in nsXULAtomList.h
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
People
(Reporter: bryner, Assigned: bryner)
Details
Attachments
(1 file)
|
613 bytes,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
gripper should be in the list of static layout atoms just as all of the other
built-in XUL elements are.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Updated•21 years ago
|
Attachment #151001 -
Flags: superreview?(dbaron)
Attachment #151001 -
Flags: review?(dbaron)
Attachment #151001 -
Flags: superreview?(dbaron)
Attachment #151001 -
Flags: superreview+
Attachment #151001 -
Flags: review?(dbaron)
Attachment #151001 -
Flags: review+
| Assignee | ||
Comment 2•21 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 3•21 years ago
|
||
No idea why, but comet crashes since this check-in.
http://tinderbox.mozilla.org/showlog.cgi?log=SeaMonkey/1087455960.19890.gz
You need to log in
before you can comment on or make changes to this bug.
Description
•