add gripper to static atom list (bug 247239), r+sr=dbaron